# ChangeLog for dev-python/apsw
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/apsw/ChangeLog,v 1.29 2010/06/11 17:36:12 phajdan.jr Exp $

  11 Jun 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  apsw-3.6.23.1.1.ebuild:
  x86 stable wrt bug #319727

*apsw-3.6.23.1.1 (13 Apr 2010)

  13 Apr 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -apsw-3.6.20.1.ebuild, -apsw-3.6.21.1.ebuild, +apsw-3.6.23.1.1.ebuild:
  Version bump.

  01 Mar 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> apsw-3.6.22.1.ebuild:
  x86 stable wrt bug #305179

  02 Feb 2010; Christian Faulhammer <fauli@gentoo.org> apsw-3.6.21.1.ebuild:
  stable x86, bug 300705

*apsw-3.6.22.1 (12 Jan 2010)

  12 Jan 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +apsw-3.6.22.1.ebuild:
  Version bump.

  28 Dec 2009; Markus Meier <maekke@gentoo.org> apsw-3.6.20.1.ebuild:
  x86 stable, bug #296039

*apsw-3.6.21.1 (11 Dec 2009)

  11 Dec 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +apsw-3.6.21.1.ebuild:
  Version bump.

  11 Dec 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  apsw-3.6.20.1.ebuild, +files/apsw-3.6.20.1-fix_tests.patch:
  Fix tests (bug #295063).

  07 Dec 2009; Mike Frysinger <vapier@gentoo.org> apsw-3.6.18.1.ebuild,
  apsw-3.6.19.1.ebuild, apsw-3.6.20.1.ebuild:
  Enable verbose output in tests.

*apsw-3.6.20.1 (20 Nov 2009)

  20 Nov 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +apsw-3.6.20.1.ebuild:
  Version bump.

  20 Nov 2009; Markus Meier <maekke@gentoo.org> apsw-3.6.18.1.ebuild:
  x86 stable, bug #288095

*apsw-3.6.19.1 (07 Nov 2009)

  07 Nov 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +apsw-3.6.19.1.ebuild:
  Version bump.

*apsw-3.6.18.1 (07 Oct 2009)

  07 Oct 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -apsw-3.6.6.2.1.ebuild, +apsw-3.6.18.1.ebuild:
  Version bump.
