@@ -1,7 +1,7 @@
 AUX apsw-3.6.20.1-fix_tests.patch 336 RMD160 000fca2da306de12102e7b5e6c082ffb6292f36d SHA1 b9e203462a78f6709519cac3e15ad0974294309c SHA256 87cafad98bbdeeed0cfe82ca98b2f7fa9768793535abb1bc7562de8c52f2adb1
-DIST apsw-3.6.22-r1.zip 532491 RMD160 6c5174140251ce029badf2f99307e8f633ac6dc2 SHA1 63c532746cd291468b9f9a3f79550a0ece359396 SHA256 e0366283ebf02cd400c7313d6a03495cd059b9ef05b23a3ed17c68f30e8e9f55
 DIST apsw-3.6.23.1-r1.zip 541009 RMD160 324b895af53bee1a7a91656f5c518cfc868b36a4 SHA1 de114b6e86a2fbc93fd0507e2e0515ab8cf96072 SHA256 2aa4dc1ecded3620add62ded442840faa114c6c6fe6987bdf7a3ab6c84cd8b7e
-EBUILD apsw-3.6.22.1.ebuild 1038 RMD160 db6ef0ce2096b2f6a2f9c0c04215e8594847d88a SHA1 a814e18a2b506289f063980a969e8303f4618c14 SHA256 ff1011f1de404cf8426fe0290bc01be1c34ad7829140e53ed2c630382106087a
+DIST apsw-3.7.0-r1.zip 563160 RMD160 220ae71e69dcc8fa0d62303302263358ce155b2f SHA1 87560a5bd531ee5e1135263c3047f66c0e9d3f33 SHA256 2b6c46fe4139a988d9531961ebb3705c77774e0e45b4f0e5869e60fe277df99e
 EBUILD apsw-3.6.23.1.1.ebuild 1040 RMD160 6f539bc7bf6fe5bed980fdf57428a4b5cbffcddb SHA1 1d1825059763dcc0d082052d34991080425ecc05 SHA256 cc0338f917a2911e13c0454af8bdcda0b6077a95b90fc35e5d253b26da11d1f2
-MISC ChangeLog 4042 RMD160 d556ab8a280faae4192b0fb33d2a7fb6e2053a7f SHA1 6ce6a1aea1341a85bc436c06ef84546b18470b8a SHA256 026ef5a637f37329a6c25a4d941eeebbe8300838615750a7c892da36465f1a13
+EBUILD apsw-3.7.0.1.ebuild 1079 RMD160 22c56954c8173000b0f8fcaec84994985f41df6b SHA1 07f97b1ee6666801558406c6b4a05ce192aaaebe SHA256 b547564bedfe38a54e0fc28473463417a51134f380bd12477fede7083de210f0
+MISC ChangeLog 4183 RMD160 8a37368bdcfadcece319cc5124151fea6c4a3925 SHA1 020fa13a8577fd4014c2532e51b67f2ab22a5800 SHA256 94bfab2c21564ce346e956d0ff9a881110e3cce8e4982bcd2af40a80fbcd32b1
 MISC metadata.xml 521 RMD160 46536dbaba8b078be569ccd226937c9ba8ae6e27 SHA1 79604d199b1674bdbf823380e6aac6f325ff3252 SHA256 d860d4be70d9a1797a97977de55a00abdb0dd58a6bb06afd94f90de5ac97d88e
