@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/apsw
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/apsw/ChangeLog,v 1.29 2010/06/11 17:36:12 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/apsw/ChangeLog,v 1.30 2010/07/25 21:13:38 arfrever Exp $
+
+*apsw-3.7.0.1 (25 Jul 2010)
+
+  25 Jul 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  +apsw-3.7.0.1.ebuild:
+  Version bump.
 
   11 Jun 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
   apsw-3.6.23.1.1.ebuild:
